--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -1,3 +1,9 @@
+.page{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .main {
   display: flex;
   flex-direction: row;
@@ -18,10 +24,9 @@
   background-color: #111;
   border-radius: 30px;
   transition: all 0.3s ease-in-out;
-  height: 363px;
-  color: white;
+  min-height: 363px;
+  color: #41ab5d;
 }
-
 
 .profileCard{
   margin: 20px;
@@ -34,12 +39,38 @@
   transition: all 0.3s ease-in-out;
   max-height: 200px;
   }
+
+  .languages{
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    padding: 40px;
+    background-color: #111;
+    color: white;
+    border-radius: 30px;
+    transition: all 0.3s ease-in-out;
+    }
+
   
   .profileCard:hover{
   transform: scale(1.05);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   }
 
+  .bottomLeft:hover{
+    transform: scale(1.05);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+    }
+
+    .languages:hover{
+      transform: scale(1.05);
+      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+      }
+      .qr:hover{
+        transform: scale(1.05);
+        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+        }
+      
 .cardText{
   margin-left: 40px;
 }
@@ -48,6 +79,18 @@
   font-size: x-large;
   font-weight: bold;
 }
+.qr{
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  background-color: #111;
+  color: white;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
+  }
 
 @media screen and (min-width: 680px) and (max-width: 1024px) {
   .main {
@@ -68,5 +111,14 @@
     background-color: white;
     margin-left: 0%;
     margin-right: 0%;
+  }
+  .bottomLeft{
+    margin: 20px;
+    padding: 40px;
+    background-color: #111;
+    border-radius: 30px;
+    transition: all 0.3s ease-in-out;
+    min-height: 320px;
+    color: #41ab5d;
   }
 }
