--- a/src/styles/profile.module.css
+++ b/src/styles/profile.module.css
@@ -1,9 +1,10 @@
-.page{
+.page {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 }
+
 .main {
   display: flex;
   flex-direction: row;
@@ -13,12 +14,12 @@
   margin-right: 10%;
 }
 
-.left{
+.left {
   display: flex;
   flex-direction: column;
 }
 
-.bottomLeft{
+.bottomLeft {
   margin: 20px;
   padding: 40px;
   background-color: #111;
@@ -28,7 +29,16 @@
   color: #41ab5d;
 }
 
-.profileCard{
+.right {
+  margin: 20px;
+  padding: 40px;
+  background-color: #111;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
+  overflow: auto;
+}
+
+.profileCard {
   margin: 20px;
   display: flex;
   flex-direction: row;
@@ -38,48 +48,55 @@
   border-radius: 30px;
   transition: all 0.3s ease-in-out;
   max-height: 200px;
-  }
+}
 
-  .languages{
-    margin: 20px;
-    display: flex;
-    flex-direction: column;
-    padding: 40px;
-    background-color: #111;
-    color: white;
-    border-radius: 30px;
-    transition: all 0.3s ease-in-out;
-    }
+.languages {
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
+  background-color: #111;
+  color: white;
+  border-radius: 30px;
+  transition: all 0.3s ease-in-out;
+}
 
-  
-  .profileCard:hover{
+
+.profileCard:hover {
   transform: scale(1.05);
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-  }
+}
 
-  .bottomLeft:hover{
-    transform: scale(1.05);
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-    }
+.bottomLeft:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
 
-    .languages:hover{
-      transform: scale(1.05);
-      box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-      }
-      .qr:hover{
-        transform: scale(1.05);
-        box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
-        }
-      
-.cardText{
+.languages:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.qr:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.right:hover {
+  transform: scale(1.02);
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
+}
+
+.cardText {
   margin-left: 40px;
 }
 
-.name{
+.name {
   font-size: x-large;
   font-weight: bold;
 }
-.qr{
+
+.qr {
   margin: 20px;
   display: flex;
   flex-direction: column;
@@ -90,7 +107,7 @@
   color: white;
   border-radius: 30px;
   transition: all 0.3s ease-in-out;
-  }
+}
 
 @media screen and (min-width: 680px) and (max-width: 1024px) {
   .main {
@@ -101,7 +118,7 @@
     margin-left: 0%;
     margin-right: 0%;
   }
-  }
+}
 
 @media screen and (max-width:680px) {
   .main {
@@ -112,7 +129,8 @@
     margin-left: 0%;
     margin-right: 0%;
   }
-  .bottomLeft{
+
+  .bottomLeft {
     margin: 20px;
     padding: 40px;
     background-color: #111;
