--- a/src/components/navbar/styles.module.css
+++ b/src/components/navbar/styles.module.css
@@ -2,12 +2,12 @@
   padding: 1%;
   padding-left: 2%;
   padding-right: 2%;
-  background-color:  #111;
   color: white;
   width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
 }
 
 .title {
@@ -16,6 +16,8 @@
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
+  display: flex;
+  flex-direction: row;
 }
 
 .icon {
