--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -35,3 +35,21 @@ a {
 
 
 }
+
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+  }
+  50% {
+    box-shadow: 0 0 30px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+  }
+  100% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+  }
+}
