--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,3 +53,36 @@ a {
     border: 2px solid #f002f8b3;
   }
 }
+
+.typed-heading {
+  width: 8ch;
+  animation: typing 2s steps(28), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 2em;
+  display:none;
+}
+.typed-heading2 {
+  text-align: center;
+  width: 22ch;
+  animation: typing 2s steps(28), blink .5s step-end infinite alternate;
+  white-space: nowrap;
+  overflow: hidden;
+  font-size: 2em;
+}
+
+@keyframes typing {
+  from {
+    width: 0
+  }
+}
+
+@media screen and (max-width: 500px) {
+    .typed-heading2{
+      display:none;
+    }
+    .typed-heading{
+      display:flex;
+    }
+  
+}
