--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -53,6 +53,66 @@ a {
     border: 2px solid #f002f8b3;
   }
 }
+@keyframes glowLink {
+  0% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 10%;
+  }
+  50% {
+    box-shadow: 0 0 30px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 10%;
+  }
+  100% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 10%;
+  }
+}
+@keyframes glowGithub {
+  0% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 50%;
+  }
+  50% {
+    box-shadow: 0 0 30px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 50%;
+  }
+  100% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 50%;
+  }
+}
+@keyframes glowEmail {
+  0% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 50%;
+  }
+  50% {
+    box-shadow: 0 0 30px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 50%;
+  }
+  100% {
+    box-shadow: 0 0 10px 0 #f002f8b3;
+    border-color: #f002f8b3;
+    border: 2px solid #f002f8b3;
+    border-radius: 50%;
+  }
+}
 
 .typed-heading {
   width: 8ch;
