--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -146,3 +146,23 @@ a {
     }
   
 }
+
+.card {
+  position: relative;
+  transition: transform 1.8s;
+  transform-style: preserve-3d;
+  animation-name: example;
+}
+
+.card .front,
+.card .back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.card .front {
+  z-index: 2;
+}
+
