--- a/src/components/ProfileCard/profile.module.css
+++ b/src/components/ProfileCard/profile.module.css
@@ -8,6 +8,22 @@
     font-size: 80px;
     font-weight: bold;
   }
+
+ .name{
+  background-color: #2ecc71;
+  animation: hue 11s linear 0s infinite reverse;
+}
+.name::before {
+  background: linear-gradient(105deg, rgba(255, 190, 0, 0), #ffbe00);
+  animation: hue 12s linear 1s infinite;
+}
+
+
+@keyframes hue {
+  to {
+    filter: hue-rotate(1turn);
+  }
+}
   .image{
     border-radius: 50%;
     width: 200px;
