--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,157 +1,3 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-}
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-  background-color: black;
-}
-
-body {
-  background-color: black;
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
-.typed-heading2{
-
-    background-color: #2ecc71;
-    animation: hue 11s linear 0s infinite reverse;
-  }
-.typed-heading2::before {
-    background: linear-gradient(105deg, rgba(255, 190, 0, 0), #ffbe00);
-    animation: hue 12s linear 1s infinite;
-  }
-
-  .reposContainer {
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    scroll-behavior: smooth;
-    width: 100vw;
-  }
-
-  .reposTooltip{
-    color:#818181;
-    display:block;
-  }
-  .reposTooltip:hover{
-    color: white;
-  }
-  
-  .reposContainer::-webkit-scrollbar {
-    display:none;
-  }
-
-  @keyframes hue {
-    to {
-      filter: hue-rotate(1turn);
-    }
-  }
-
-
-
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-
-
-}
-
-@keyframes glow {
-  0% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-  }
-  50% {
-    box-shadow: 0 0 30px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-  }
-  100% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-  }
-}
-@keyframes glowLink {
-  0% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 10%;
-  }
-  50% {
-    box-shadow: 0 0 30px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 10%;
-  }
-  100% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 10%;
-  }
-}
-@keyframes glowGithub {
-  0% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 50%;
-  }
-  50% {
-    box-shadow: 0 0 30px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 50%;
-  }
-  100% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 50%;
-  }
-}
-@keyframes glowEmail {
-  0% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 50%;
-  }
-  50% {
-    box-shadow: 0 0 30px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 50%;
-  }
-  100% {
-    box-shadow: 0 0 10px 0 #f002f8b3;
-    border-color: #f002f8b3;
-    border: 2px solid #f002f8b3;
-    border-radius: 50%;
-  }
-}
-
-@media screen and (max-width: 500px){
-  .reposTooltip{
-    display:none;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
